--- a/Code/Demixing/Demixing Minicon Plots and Code Part 0.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 0.ipynb
@@ -581,6 +581,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "post_func = posterior_setup(low=1, high=1, discrete_c=1, num_s=60, r_max=1)\n",
+    "test_data = generate_testset(4500, stim_0=-30, stim_1=-30, discrete_c=1, low=1, high=1, r_max=1)\n",
+    "r, _, _ = test_data\n",
+    "posts[1, 0] = get_posteriors_pool(r, post_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 117,
    "metadata": {
     "collapsed": false
@@ -617,25 +631,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20.2534726967\n"
-     ]
-    }
-   ],
-   "source": [
-    "print np.mean(post_stats['mse'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 121,
    "metadata": {
     "collapsed": true
@@ -654,7 +649,81 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "c_arr = [1, 2, 4]\n",
+    "num_deltas = 30\n",
+    "nn_stats = {'mean_s1': [[], [], []], \n",
+    "                'mean_s2': [[], [], []], \n",
+    "                'bias_s1': [[], [], []], \n",
+    "                'bias_s2': [[], [], []], \n",
+    "                'var_s1': [[], [], []], \n",
+    "                'var_s2': [[], [], []], \n",
+    "                'cov': [[], [], []], \n",
+    "                'corr': [[], [], []],\n",
+    "                'mse': [[], [], []],\n",
+    "                }\n",
+    "\n",
+    "for i in range(600):\n",
+    "    file_name = 'output_nn_runs/nn_runs' + str(i) + '.pkl'\n",
+    "    if os.path.isfile(file_name):\n",
+    "        pkl_file = open(file_name, 'rb')\n",
+    "        nn, nnx, valid_mse, stats, c = pickle.load(pkl_file)\n",
+    "        ind = c - 1\n",
+    "        if c == 4:\n",
+    "            ind = 2\n",
+    "        nn_stats['mean_s1'][ind].append(stats['mean_s1'])\n",
+    "        nn_stats['mean_s2'][ind].append(stats['mean_s2'])\n",
+    "        nn_stats['bias_s1'][ind].append(stats['bias_s1'])\n",
+    "        nn_stats['bias_s2'][ind].append(stats['bias_s2'])\n",
+    "        nn_stats['var_s1'][ind].append(stats['var_s1'])\n",
+    "        nn_stats['var_s2'][ind].append(stats['var_s2'])\n",
+    "        nn_stats['cov'][ind].append(stats['cov'])\n",
+    "        nn_stats['corr'][ind].append(stats['corr'])\n",
+    "        nn_stats['mse'][ind].append(stats['mse'])\n",
+    "for ind in range(len(nn_stats['mean_s1'])):\n",
+    "    nn_stats['mean_s1'][ind] = np.array(nn_stats['mean_s1'][ind])\n",
+    "    nn_stats['mean_s2'][ind] = np.array(nn_stats['mean_s2'][ind])\n",
+    "    nn_stats['bias_s1'][ind] = np.array(nn_stats['bias_s1'][ind])\n",
+    "    nn_stats['bias_s2'][ind] = np.array(nn_stats['bias_s2'][ind])\n",
+    "    nn_stats['var_s1'][ind] = np.array(nn_stats['var_s1'][ind])\n",
+    "    nn_stats['var_s2'][ind] = np.array(nn_stats['var_s2'][ind])\n",
+    "    nn_stats['cov'][ind] = np.array(nn_stats['cov'][ind])\n",
+    "    nn_stats['corr'][ind] = np.array(nn_stats['corr'][ind])\n",
+    "    nn_stats['mse'][ind] = np.array(nn_stats['mse'][ind])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "f, ax = plt.subplots(2, 3, sharex=True, sharey=True)\n",
+    "s = range(0, 30)\n",
+    "for i in range(len(c_arr)):\n",
+    "    neg_sd = np.mean(nn_stats['bias_s2'][i], axis=0) - np.std(nn_stats['bias_s2'][i], axis=0)\n",
+    "    pos_sd = np.mean(nn_stats['bias_s2'][i], axis=0) + np.std(nn_stats['bias_s2'][i], axis=0)\n",
+    "    ax[0, i].plot(post_stats['bias_s2'][i], c='k', label=\"Posterior mean\")\n",
+    "    ax[0, i].plot(np.mean(nn_stats['bias_s2'][i], axis=0), c='m', label=\"NN\")\n",
+    "    ax[0, i].set_title(\"Contrast = \" + str(c_arr[i]))\n",
+    "    ax[0, i].fill_between(s, pos_sd, neg_sd, facecolor='m', alpha=.5, edgecolor=\"None\", label=\"Posterior\")\n",
+    "ax[0, 0].set_ylabel('Bias' ,fontsize=30)\n",
+    "ax[0, 2].legend(loc='upper right')\n",
+    "for i in range(len(c_arr)):\n",
+    "    neg_sd = np.mean(nn_stats['var_s2'][i], axis=0) - np.std(nn_stats['bias_s2'][i], axis=0)\n",
+    "    pos_sd = np.mean(nn_stats['var_s2'][i], axis=0) + np.std(nn_stats['bias_s2'][i], axis=0)\n",
+    "    ax[1, i].plot(post_stats['var_s2'][i], c='k', label=\"Posterior mean\")\n",
+    "    ax[1, i].plot(np.mean(nn_stats['var_s2'][i], axis=0), c='m', label=\"NN\")\n",
+    "    #ax[1, i].set_title(\"Contrast = \" + str(c_arr[i]))\n",
+    "    ax[1, i].fill_between(s, pos_sd, neg_sd, facecolor='m', alpha=.5, edgecolor=\"None\", label=\"Posterior\")\n",
+    "ax[1, 1].set_xlabel(r'$\\Delta s$',fontsize=30)\n",
+    "ax[1, 0].set_ylabel('Variance' ,fontsize=30)\n",
+    "f.set_size_inches(15,15)"
+   ]
   }
  ],
  "metadata": {
