--- a/Code/Demixing/Demixing Minicon Plots and Code Part 1.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 1.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 367,
    "metadata": {
     "collapsed": false
    },
@@ -141,6 +141,9 @@
     "def generate_trainset(ndata, highlow=False, discrete_c=None, low=.3, high=.7, r_max=10):\n",
     "    s_0, s_1 = random_s(ndata, True)\n",
     "    if highlow:\n",
+    "        if type(discrete_c) == list:\n",
+    "            low = min(discrete_c[0])\n",
+    "            high = max(discrete_c[0])\n",
     "        c_arr = np.concatenate((np.ones((ndata/2, 2)) * low, np.ones((ndata/2, 2)) * high), axis=0)\n",
     "        np.random.shuffle(c_arr)\n",
     "        c_0, c_1 = c_arr.T\n",
@@ -2646,77 +2649,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 368,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 trials per contrast level\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "(array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "        [ 0.,  0.,  0., ...,  1.,  0.,  0.],\n",
+       "        [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
        "        [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
        "        ..., \n",
        "        [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
        "        [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
        "        [ 0.,  0.,  0., ...,  0.,  0.,  0.]]),\n",
-       " array([[ 0.41698951,  0.51524984],\n",
-       "        [ 0.33270607,  0.66314064],\n",
-       "        [ 0.23722548,  0.58887515],\n",
-       "        [-0.10338942, -0.07158242],\n",
-       "        [-0.59553902, -0.40505015],\n",
-       "        [-0.32413622,  0.38233054],\n",
-       "        [-0.3194495 ,  0.35289591],\n",
-       "        [-0.06174703,  0.0159184 ],\n",
-       "        [-0.28621635,  0.65576205],\n",
-       "        [-0.29531376,  0.06220085],\n",
-       "        [-0.60352523, -0.37339593],\n",
-       "        [ 0.09067594,  0.17961338],\n",
-       "        [-0.48127666, -0.05497235],\n",
-       "        [-0.24269307,  0.50435957],\n",
-       "        [-0.63316454,  0.65392494],\n",
-       "        [ 0.28733819,  0.47868399],\n",
-       "        [ 0.08907943,  0.49213147],\n",
-       "        [-0.60312121,  0.16197644],\n",
-       "        [-0.4909339 ,  0.10551386],\n",
-       "        [-0.64168259,  0.08671877]]),\n",
-       " array([[1, 1],\n",
-       "        [1, 1],\n",
-       "        [1, 1],\n",
-       "        [1, 1],\n",
-       "        [2, 1],\n",
-       "        [2, 1],\n",
-       "        [2, 1],\n",
-       "        [2, 1],\n",
-       "        [2, 1],\n",
-       "        [1, 1],\n",
-       "        [1, 1],\n",
-       "        [2, 1],\n",
-       "        [2, 1],\n",
-       "        [2, 1],\n",
-       "        [1, 1],\n",
-       "        [2, 1],\n",
-       "        [1, 1],\n",
-       "        [1, 1],\n",
-       "        [2, 1],\n",
-       "        [1, 1]]))"
+       " array([[-0.48049719,  0.42009247],\n",
+       "        [-0.09585007,  0.09447035],\n",
+       "        [-0.06479308,  0.02968884],\n",
+       "        [ 0.36005563,  0.5758786 ],\n",
+       "        [ 0.14141321,  0.15075994],\n",
+       "        [ 0.0170276 ,  0.05888677],\n",
+       "        [ 0.21180084,  0.47703928],\n",
+       "        [-0.30382919,  0.64491849],\n",
+       "        [ 0.02574869,  0.30752895],\n",
+       "        [-0.16157703, -0.02710954],\n",
+       "        [-0.64484422,  0.13794001],\n",
+       "        [-0.25547374,  0.25534848],\n",
+       "        [ 0.08682794,  0.4376792 ],\n",
+       "        [-0.10028301,  0.21470487],\n",
+       "        [-0.17831918,  0.37567353],\n",
+       "        [-0.50316998,  0.23595017],\n",
+       "        [ 0.35320412,  0.58615986],\n",
+       "        [-0.55099419,  0.43003488],\n",
+       "        [-0.43463592, -0.20216674],\n",
+       "        [-0.04913382,  0.09310409]]),\n",
+       " array([[ 1.,  1.],\n",
+       "        [ 4.,  4.],\n",
+       "        [ 1.,  1.],\n",
+       "        [ 4.,  4.],\n",
+       "        [ 1.,  1.],\n",
+       "        [ 4.,  4.],\n",
+       "        [ 4.,  4.],\n",
+       "        [ 1.,  1.],\n",
+       "        [ 4.,  4.],\n",
+       "        [ 1.,  1.],\n",
+       "        [ 1.,  1.],\n",
+       "        [ 1.,  1.],\n",
+       "        [ 4.,  4.],\n",
+       "        [ 4.,  4.],\n",
+       "        [ 4.,  4.],\n",
+       "        [ 1.,  1.],\n",
+       "        [ 4.,  4.],\n",
+       "        [ 4.,  4.],\n",
+       "        [ 1.,  1.],\n",
+       "        [ 1.,  1.]]))"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "generate_trainset(20, discrete_c=[[1, 2], [1]], r_max=1)"
+    "generate_trainset(20, discrete_c=[[1, 2, 4], [1]], highlow = True, r_max=1)"
    ]
   },
   {
