--- a/Code/Demixing/Demixing Minicon Plots and Code Part 0.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 0.ipynb
@@ -36,6 +36,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def lik_means(s_1, s_2, c_0=.5, c_1=.5, sprefs=sprefs, sigtc_sq=sigtc_sq, r_max=10):\n",
+    "    sprefs_data = np.tile(sprefs, (len(s_1), 1))\n",
+    "    s_0t = np.exp(-np.square((np.transpose(np.tile(s_1, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
+    "    stim_0 = c_0 * s_0t.T\n",
+    "    s_1t = np.exp(-np.square((np.transpose(np.tile(s_2, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
+    "    stim_1 = c_1 * s_1t.T\n",
+    "    r = r_max * (stim_0 + stim_1)\n",
+    "    return r.T\n",
+    "def posterior(r, means, s1_grid, s2_grid):\n",
+    "    ns_liks = poisson.pmf(r, mu=means)\n",
+    "    stim_liks = np.prod(ns_liks, axis=1)\n",
+    "    #p_s = 2/14400\n",
+    "    #logp_s = np.log(p_s)\n",
+    "    logp_s = -3.8573325\n",
+    "    #p_c = 1/9\n",
+    "    #logp_c = np.log(p_c)\n",
+    "    logp_c = -0.95424250943\n",
+    "    loglik = np.sum(np.log(ns_liks), axis=1)\n",
+    "    mean1 = np.sum(s1_grid * np.exp(loglik + logp_s + logp_c)/np.sum(np.exp(loglik + logp_s + logp_c)))\n",
+    "    mean2 = np.sum(s2_grid * np.exp(loglik + logp_s + logp_c)/np.sum(np.exp(loglik + logp_s + logp_c)))\n",
+    "    expsquare1 = np.sum(np.square(s1_grid) * np.exp(loglik + logp_s + logp_c)/np.sum(np.exp(loglik + logp_s + logp_c)))\n",
+    "    expsquare2 = np.sum(np.square(s2_grid) * np.exp(loglik + logp_s + logp_c)/np.sum(np.exp(loglik + logp_s + logp_c)))\n",
+    "    var1 = expsquare1 - np.square(mean1)\n",
+    "    var2 = expsquare2 - np.square(mean2)\n",
+    "    return mean1, mean2, var1, var2\n",
+    "def posterior_setup(low=.3, high=.7, discrete_c = 3, num_s=100, r_max=10):\n",
+    "    grid = np.linspace(-60, 60, num_s)\n",
+    "    s1s = np.concatenate([[grid[i]]*(num_s-i) for i in range(num_s)])\n",
+    "    cs = np.linspace(low, high, discrete_c)\n",
+    "    s1_grid, c1_grid, c2_grid = cartesian((s1s, cs, cs)).T\n",
+    "    s2s = np.concatenate([grid[i:num_s+1] for i in range(num_s)])\n",
+    "    s2_grid = np.repeat(s2s, (discrete_c**2), axis=0)\n",
+    "    means = lik_means(s1_grid, s2_grid, c_0=c1_grid, c_1=c2_grid, r_max=r_max)\n",
+    "    partial_post = partial(posterior, means=means, s1_grid=s1_grid, s2_grid=s2_grid)\n",
+    "    return partial_post\n",
+    "def get_posteriors(r, post_func):\n",
+    "    posteriors = {'mean_s1': None, 'mean_s2': None, 'var_s1': None, 'var_s2': None}\n",
+    "    p = np.array([post_func(r[i]) for i in range(len(r))]).T\n",
+    "    posteriors['mean_s1'], posteriors['mean_s2'], posteriors['var_s1'], posteriors['var_s2'] = p\n",
+    "    return posteriors\n",
+    "def get_posteriors_pool(r, post_func):\n",
+    "    pool = mp.Pool(processes=8)\n",
+    "    posteriors = {'mean_s1': None, 'mean_s2': None, 'var_s1': None, 'var_s2': None}\n",
+    "    p = np.array(pool.map(post_func, r)).T\n",
+    "    posteriors['mean_s1'], posteriors['mean_s2'], posteriors['var_s1'], posteriors['var_s2'] = p\n",
+    "    return posteriors"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "collapsed": false
@@ -222,62 +278,6 @@
    "metadata": {},
    "source": [
     "Posterior computation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def lik_means(s_1, s_2, c_0=.5, c_1=.5, sprefs=sprefs, sigtc_sq=sigtc_sq, r_max=10):\n",
-    "    sprefs_data = np.tile(sprefs, (len(s_1), 1))\n",
-    "    s_0t = np.exp(-np.square((np.transpose(np.tile(s_1, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
-    "    stim_0 = c_0 * s_0t.T\n",
-    "    s_1t = np.exp(-np.square((np.transpose(np.tile(s_2, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
-    "    stim_1 = c_1 * s_1t.T\n",
-    "    r = r_max * (stim_0 + stim_1)\n",
-    "    return r.T\n",
-    "def posterior(r, means, s1_grid, s2_grid):\n",
-    "    ns_liks = poisson.pmf(r, mu=means)\n",
-    "    stim_liks = np.prod(ns_liks, axis=1)\n",
-    "    #p_s = 2/14400\n",
-    "    #logp_s = np.log(p_s)\n",
-    "    logp_s = -3.8573325\n",
-    "    #p_c = 1/9\n",
-    "    #logp_c = np.log(p_c)\n",
-    "    logp_c = -0.95424250943\n",
-    "    loglik = np.sum(np.log(ns_liks), axis=1)\n",
-    "    mean1 = np.sum(s1_grid * np.exp(loglik + logp_s + logp_c)/np.sum(np.exp(loglik + logp_s + logp_c)))\n",
-    "    mean2 = np.sum(s2_grid * np.exp(loglik + logp_s + logp_c)/np.sum(np.exp(loglik + logp_s + logp_c)))\n",
-    "    expsquare1 = np.sum(np.square(s1_grid) * np.exp(loglik + logp_s + logp_c)/np.sum(np.exp(loglik + logp_s + logp_c)))\n",
-    "    expsquare2 = np.sum(np.square(s2_grid) * np.exp(loglik + logp_s + logp_c)/np.sum(np.exp(loglik + logp_s + logp_c)))\n",
-    "    var1 = expsquare1 - np.square(mean1)\n",
-    "    var2 = expsquare2 - np.square(mean2)\n",
-    "    return mean1, mean2, var1, var2\n",
-    "def posterior_setup(low=.3, high=.7, discrete_c = 3, num_s=100, r_max=10):\n",
-    "    grid = np.linspace(-60, 60, num_s)\n",
-    "    s1s = np.concatenate([[grid[i]]*(num_s-i) for i in range(num_s)])\n",
-    "    cs = np.linspace(low, high, discrete_c)\n",
-    "    s1_grid, c1_grid, c2_grid = cartesian((s1s, cs, cs)).T\n",
-    "    s2s = np.concatenate([grid[i:num_s+1] for i in range(num_s)])\n",
-    "    s2_grid = np.repeat(s2s, (discrete_c**2), axis=0)\n",
-    "    means = lik_means(s1_grid, s2_grid, c_0=c1_grid, c_1=c2_grid, r_max=r_max)\n",
-    "    partial_post = partial(posterior, means=means, s1_grid=s1_grid, s2_grid=s2_grid)\n",
-    "    return partial_post\n",
-    "def get_posteriors(r, post_func):\n",
-    "    posteriors = {'mean_s1': None, 'mean_s2': None, 'var_s1': None, 'var_s2': None}\n",
-    "    p = np.array([post_func(r[i]) for i in range(len(r))]).T\n",
-    "    posteriors['mean_s1'], posteriors['mean_s2'], posteriors['var_s1'], posteriors['var_s2'] = p\n",
-    "    return posteriors\n",
-    "def get_posteriors_pool(r, post_func):\n",
-    "    pool = mp.Pool(processes=8)\n",
-    "    posteriors = {'mean_s1': None, 'mean_s2': None, 'var_s1': None, 'var_s2': None}\n",
-    "    p = np.array(pool.map(post_func, r)).T\n",
-    "    posteriors['mean_s1'], posteriors['mean_s2'], posteriors['var_s1'], posteriors['var_s2'] = p\n",
-    "    return posteriors"
    ]
   },
   {
@@ -724,6 +724,171 @@
     "ax[1, 0].set_ylabel('Variance' ,fontsize=30)\n",
     "f.set_size_inches(15,15)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def posterior_setup2(low=.3, high=.7, discrete_c = 3, num_s=100, r_max=10):\n",
+    "    grid = np.linspace(-60, 60, num_s)\n",
+    "    s1s = np.concatenate([[grid[i]]*(num_s-i) for i in range(num_s)])\n",
+    "    s2s = np.concatenate([grid[i:num_s+1] for i in range(num_s)])\n",
+    "    if type(discrete_c) == int:\n",
+    "        cs = np.linspace(low, high, discrete_c)\n",
+    "        s1_grid, c1_grid, c2_grid = cartesian((s1s, cs, cs)).T\n",
+    "        s2_grid = np.repeat(s2s, (discrete_c**2), axis=0)\n",
+    "    else:\n",
+    "        c1 = discrete_c[0]\n",
+    "        c2 = discrete_c[1]\n",
+    "        s1_grid, c1_grid, c2_grid = cartesian((s1s, c1, c2)).T\n",
+    "        s2_grid = np.repeat(s2s, (len(c1) * len(c2)), axis=0)\n",
+    "    means = lik_means(s1_grid, s2_grid, c_0=c1_grid, c_1=c2_grid, r_max=r_max)\n",
+    "    partial_post = partial(posterior, means=means, s1_grid=s1_grid, s2_grid=s2_grid)\n",
+    "    return partial_post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 trials per contrast level\n"
+     ]
+    }
+   ],
+   "source": [
+    "r, _, _ = generate_testset(20, stim_0=-30, stim_1=0, discrete_c=1, low=1, high=1, r_max=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def lik_means(s_1, s_2, c_0=.5, c_1=.5, sprefs=sprefs, sigtc_sq=sigtc_sq, r_max=10):\n",
+    "    sprefs_data = np.tile(sprefs, (len(s_1), 1))\n",
+    "    s_0t = np.exp(-np.square((np.transpose(np.tile(s_1, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
+    "    stim_0 = c_0 * s_0t.T\n",
+    "    s_1t = np.exp(-np.square((np.transpose(np.tile(s_2, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
+    "    stim_1 = c_1 * s_1t.T\n",
+    "    r = r_max * (stim_0 + stim_1)\n",
+    "    return r.T\n",
+    "def posterior(r, means, s1_grid, s2_grid):\n",
+    "    ns_liks = poisson.pmf(r, mu=means)\n",
+    "    stim_liks = np.prod(ns_liks, axis=1)\n",
+    "    #p_s = 2/14400\n",
+    "    #logp_s = np.log(p_s)\n",
+    "    logp_s = -3.8573325\n",
+    "    loglik = np.sum(np.log(ns_liks), axis=1)\n",
+    "    mean1 = np.sum(s1_grid * np.exp(loglik + logp_s)/np.sum(np.exp(loglik + logp_s)))\n",
+    "    mean2 = np.sum(s2_grid * np.exp(loglik + logp_s)/np.sum(np.exp(loglik + logp_s)))\n",
+    "    expsquare1 = np.sum(np.square(s1_grid) * np.exp(loglik + logp_s)/np.sum(np.exp(loglik + logp_s)))\n",
+    "    expsquare2 = np.sum(np.square(s2_grid) * np.exp(loglik + logp_s)/np.sum(np.exp(loglik + logp_s)))\n",
+    "    var1 = expsquare1 - np.square(mean1)\n",
+    "    var2 = expsquare2 - np.square(mean2)\n",
+    "    return mean1, mean2, var1, var2\n",
+    "def posterior_setup(low=.3, high=.7, discrete_c = 3, num_s=100, r_max=10):\n",
+    "    grid = np.linspace(-60, 60, num_s)\n",
+    "    s1s = np.concatenate([[grid[i]]*(num_s-i) for i in range(num_s)])\n",
+    "    s2s = np.concatenate([grid[i:num_s+1] for i in range(num_s)])\n",
+    "    if type(discrete_c) == int:\n",
+    "        cs = np.linspace(low, high, discrete_c)\n",
+    "        s1_grid, c1_grid, c2_grid = cartesian((s1s, cs, cs)).T\n",
+    "        s2_grid = np.repeat(s2s, (discrete_c**2), axis=0)\n",
+    "    else:\n",
+    "        c1 = discrete_c[0]\n",
+    "        c2 = discrete_c[1]\n",
+    "        s1_grid, c1_grid, c2_grid = cartesian((s1s, c1, c2)).T\n",
+    "        s2_grid = np.repeat(s2s, (len(c1) * len(c2)), axis=0)\n",
+    "    means = lik_means(s1_grid, s2_grid, c_0=c1_grid, c_1=c2_grid, r_max=r_max)\n",
+    "    partial_post = partial(posterior, means=means, s1_grid=s1_grid, s2_grid=s2_grid)\n",
+    "    return partial_post\n",
+    "def get_posteriors(r, post_func):\n",
+    "    posteriors = {'mean_s1': None, 'mean_s2': None, 'var_s1': None, 'var_s2': None}\n",
+    "    p = np.array([post_func(r[i]) for i in range(len(r))]).T\n",
+    "    posteriors['mean_s1'], posteriors['mean_s2'], posteriors['var_s1'], posteriors['var_s2'] = p\n",
+    "    return posteriors\n",
+    "def get_posteriors_pool(r, post_func):\n",
+    "    pool = mp.Pool(processes=8)\n",
+    "    posteriors = {'mean_s1': None, 'mean_s2': None, 'var_s1': None, 'var_s2': None}\n",
+    "    p = np.array(pool.map(post_func, r)).T\n",
+    "    posteriors['mean_s1'], posteriors['mean_s2'], posteriors['var_s1'], posteriors['var_s2'] = p\n",
+    "    return posteriors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "post_func2 = posterior_setup2(low=.3, high=.7, discrete_c=[[1, 2, 4], [1, 2, 4]], num_s=60, r_max=1)\n",
+    "post_func = posterior_setup(low=1, high=4, discrete_c=3, num_s=60, r_max=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mean_s1': array([-30.12372317, -29.44944901, -27.84430646, -33.433825  ,\n",
+       "        -31.1149611 , -30.3551887 , -27.66872096, -30.58896692,\n",
+       "        -29.8137174 , -33.0199744 , -34.3782301 , -29.02432073,\n",
+       "        -33.48048196, -19.6871417 , -34.34430237, -22.70695472,\n",
+       "        -34.96729743, -30.79192884, -32.89781136, -27.17832086]),\n",
+       " 'mean_s2': array([-1.33638436,  0.6044681 , -0.05350654, -3.12473354,  2.78932545,\n",
+       "        -7.09297242, -5.52336752,  0.66851948, -1.19338853, -4.24907789,\n",
+       "        -0.20618065,  3.98425524, -1.31458499,  2.52479461, -1.28820592,\n",
+       "        -4.85380512,  0.25225566, -2.44911278,  0.2986617 , -1.72812778]),\n",
+       " 'var_s1': array([  32.59101302,   20.70325008,   11.50493443,  238.45047196,\n",
+       "          11.75976682,   16.76765087,   21.88859757,   19.23554711,\n",
+       "          16.92586284,   20.74420049,   23.1429591 ,   23.78183524,\n",
+       "          14.92356465,   49.31188829,   10.07562562,   26.4505829 ,\n",
+       "          25.88847754,   17.12818349,   70.40115985,   50.38059915]),\n",
+       " 'var_s2': array([ 21.42904966,  16.17310199,  28.08517927,  16.24661863,\n",
+       "         28.99813892,  31.05171263,  10.59388075,  14.43802533,\n",
+       "         17.25989743,  18.60165652,  29.62546138,  14.19402495,\n",
+       "         14.4544715 ,  25.34345272,  29.09789443,  20.68749278,\n",
+       "         18.79912878,  43.06435534,  12.15556554,  14.22847153])}"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_posteriors_pool(r[0:20], post_func2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
