--- a/Code/Demixing/Demixing Minicon Plots and Code Part 1.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 1.ipynb
@@ -2377,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 373,
    "metadata": {
     "collapsed": false
    },
@@ -2386,24 +2386,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-25.6476838  -24.93231785 -24.12306136 ...,  -2.6910961   -1.79858504\n",
-      "   -0.89460773]\n",
-      " [-26.82515397 -26.09459463 -25.21103184 ...,  -3.77193099  -2.52860428\n",
-      "   -1.29429875]\n",
-      " [-24.4180447  -24.04680775 -23.69910845 ...,  -3.91858372  -2.80896754\n",
-      "   -1.67720076]\n",
-      " ..., \n",
-      " [-24.87085781 -24.41605943 -24.01694394 ...,  -2.86342398  -1.89096194\n",
-      "   -0.91744443]\n",
-      " [-27.91702044 -27.63911514 -27.20437967 ...,  -4.20978856  -3.29874163\n",
-      "   -2.30698711]\n",
-      " [-25.01268201 -24.60445043 -24.26729719 ...,  -4.65101283  -3.50110967\n",
-      "   -2.17668484]]\n"
+      "500 trials per contrast level\n",
+      "testing\n",
+      "{'bias_s1': -1.1123566499303301, 'bias_s2': -0.48121571555999765, 'corr': 0.27412399863047832, 'cov': 3.4944146731722214, 'mse': 27.569406708627518, 'var_s1': 15.861038323812025, 'mean_s1': -31.11235664993033, 'mean_s2': -20.481215715559998, 'var_s2': 10.245263903764373} [ 196.32134171   90.15613629   62.87752448   53.29270319   48.11675225\n",
+      "   44.38421531   42.3815979    41.1468871    40.27769787   39.74670591\n",
+      "   39.37232335   39.28664473   39.23758341   39.1558187    39.00798333\n",
+      "   38.74674869   38.48961755   38.31303296   38.18917121   38.10425622\n",
+      "   38.03551407   37.95647728   37.89674013   37.84687292   37.75265496\n",
+      "   37.71235424   37.67940907   37.64782488   37.63612844   37.6176752\n",
+      "   37.6000919    37.57873585   37.55624555   37.54401906   37.53993305\n",
+      "   37.5337843    37.53022871   37.52427081   37.51947443   37.50802172\n",
+      "   37.49798928   37.49795973   37.47010735   37.47265983   37.46194006\n",
+      "   37.44208602   37.41458188   37.38491233   37.35215973   37.34547188\n",
+      "   37.32837809   37.29198769   37.30674174   37.27547202   37.26247984\n",
+      "   37.25086697   37.27392166   37.28284387   37.28908159   37.30066992\n",
+      "   37.31369987   37.33825702   37.36438871   37.3733541    37.37154859\n",
+      "   37.38362215   37.37387051   37.37242631   37.37597821   37.37166627\n",
+      "   37.38413325   37.38684908   37.39059787   37.39316834   37.4019466\n",
+      "   37.41036347   37.41115328   37.41668982   37.42520547   37.43846346\n",
+      "   37.44286152   37.44140189   37.45106287   37.46653012   37.48183827\n",
+      "   37.51363179   37.52482095   37.52504351   37.53127657   37.53400746\n",
+      "   37.52388764   37.53558883   37.54144639   37.54675068   37.55021487\n",
+      "   37.55677624   37.54919867   37.54778058   37.54376161   37.54049343]\n"
      ]
     }
    ],
    "source": [
-    "print nn_stats['mean_s2'][2]"
+    "pkl_file = open('output_nn_runs_2/nn_runs_2_1.pkl', 'rb')\n",
+    "nn, nnx, valid_mse, stats, c = pickle.load(pkl_file)\n",
+    "test_data = generate_testset(4500, stim_0=-30, stim_1=-20, discrete_c=[[1, 2, 4], [1, 2, 4]], r_max=1)\n",
+    "nn_preds, _ = test_nn(nn, nnx, test_data)\n",
+    "nn_preds = nn_preds.T * 90\n",
+    "stats = get_statistics(-30, -20, nn_preds)\n",
+    "print stats, valid_mse"
    ]
   },
   {
