--- a/Notes/Demixing/Divisive Normalization Notes 2.tex
+++ b/Notes/Demixing/Divisive Normalization Notes 2.tex
@@ -48,6 +48,9 @@ $r$ is response of neurons ($\sum N$)\\
 $\hat{\mathbf{s}} = \arg\max_\mathbf{s} p(\mathbf{r|s}) p(\mathbf{s})$
 \\
 \\
+$\mathbf{r} = \text{Poisson} (f (g_1s_1) + f(g_2s_2))$
+\\
+\\
 $f_i(s)$ is tuning curve of neuron i\\
 Tuning curve assumptions:\\
 Tuning curves cover the space so $\sum_i f_i(s_j)$ is independent of $s_j$\\
