--- a/Notes/Demixing/Divisive Normalization Notes 2.tex
+++ b/Notes/Demixing/Divisive Normalization Notes 2.tex
@@ -48,7 +48,10 @@ $r$ is response of neurons ($\sum N$)\\
 $\hat{\mathbf{s}} = \arg\max_\mathbf{s} p(\mathbf{r|s}) p(\mathbf{s})$
 \\
 \\
-$\mathbf{r} = \text{Poisson} (f (g_1s_1) + f(g_2s_2))$
+$\mathbf{r_\text{hid}} = \phi (\mathbf{Wr + b})$
+\\
+\\
+$\mathbf{r} = \text{Poisson} (g_1f (s_1) + g_2f(s_2))$
 \\
 \\
 $f_i(s)$ is tuning curve of neuron i\\
