--- a/Code/Demixing/Demixing Minicon Plots and Code Part 1.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 1.ipynb
@@ -2732,6 +2732,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 374,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(400):\n",
+    "    file_name = 'output_nn_tests_0/nn_tests_0_' + str(i) + '.pkl'\n",
+    "    if os.path.isfile(file_name):\n",
+    "        pkl_file = open(file_name, 'rb')\n",
+    "        nn, nnx, valid_mse, stats, c = pickle.load(pkl_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 196.32134171,   90.15613629,   62.87752448,   53.29270319,\n",
+       "         48.11675225,   44.38421531,   42.3815979 ,   41.1468871 ,\n",
+       "         40.27769787,   39.74670591,   39.37232335,   39.28664473,\n",
+       "         39.23758341,   39.1558187 ,   39.00798333,   38.74674869,\n",
+       "         38.48961755,   38.31303296,   38.18917121,   38.10425622,\n",
+       "         38.03551407,   37.95647728,   37.89674013,   37.84687292,\n",
+       "         37.75265496,   37.71235424,   37.67940907,   37.64782488,\n",
+       "         37.63612844,   37.6176752 ,   37.6000919 ,   37.57873585,\n",
+       "         37.55624555,   37.54401906,   37.53993305,   37.5337843 ,\n",
+       "         37.53022871,   37.52427081,   37.51947443,   37.50802172,\n",
+       "         37.49798928,   37.49795973,   37.47010735,   37.47265983,\n",
+       "         37.46194006,   37.44208602,   37.41458188,   37.38491233,\n",
+       "         37.35215973,   37.34547188,   37.32837809,   37.29198769,\n",
+       "         37.30674174,   37.27547202,   37.26247984,   37.25086697,\n",
+       "         37.27392166,   37.28284387,   37.28908159,   37.30066992,\n",
+       "         37.31369987,   37.33825702,   37.36438871,   37.3733541 ,\n",
+       "         37.37154859,   37.38362215,   37.37387051,   37.37242631,\n",
+       "         37.37597821,   37.37166627,   37.38413325,   37.38684908,\n",
+       "         37.39059787,   37.39316834,   37.4019466 ,   37.41036347,\n",
+       "         37.41115328,   37.41668982,   37.42520547,   37.43846346,\n",
+       "         37.44286152,   37.44140189,   37.45106287,   37.46653012,\n",
+       "         37.48183827,   37.51363179,   37.52482095,   37.52504351,\n",
+       "         37.53127657,   37.53400746,   37.52388764,   37.53558883,\n",
+       "         37.54144639,   37.54675068,   37.55021487,   37.55677624,\n",
+       "         37.54919867,   37.54778058,   37.54376161,   37.54049343])"
+      ]
+     },
+     "execution_count": 376,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_mse"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
